--- a/views/graph.tt
+++ b/views/graph.tt
@@ -26,7 +26,7 @@
                 <label for="email">X-axis:</label>
                 <select class="form-control" name="x_axis">
                     [% FOREACH column IN layout.all %]
-                        <option value="[% column.id %]" [% IF graph.x_axis == column.id %]selected[% END %]>[% column.name %]</option>
+                        <option value="[% column.id %]" [% IF graph.x_axis == column.id %]selected[% END %]>[% column.name | html_entity %]</option>
                     [% END %]
                     <option value="" [% IF NOT graph.x_axis %]selected[% END %]>&lt;All fields in view&gt;</option>
                 </select>
@@ -46,13 +46,13 @@
                 <label for="email">Y-axis field:</label>
                 <select class="form-control" name="y_axis">
                     [% FOREACH column IN layout.all %]
-                        <option value="[% column.id %]" [% IF graph.y_axis == column.id %]selected[% END %]>[% column.name %]</option>
+                        <option value="[% column.id %]" [% IF graph.y_axis == column.id %]selected[% END %]>[% column.name | html_entity %]</option>
                     [% END %]
                 </select>
             </div>
             <div class="form-group">
                 <label for="y_axis_label">Y-axis label:</label>
-                <input type="text" id="y_axis_label" class="form-control" name="y_axis_label" value="[% graph.y_axis_label %]">
+                <input type="text" id="y_axis_label" class="form-control" name="y_axis_label" value="[% graph.y_axis_label | html_entity %]">
             </div>
             <div class="form-group">
                 <label for="email">Y-axis values:</label>
@@ -66,7 +66,7 @@
                 <select class="form-control" name="group_by">
                     <option value="" [% UNLESS graph.group_by.id %]selected[% END %]></option>
                     [% FOREACH column IN layout.all %]
-                        <option value="[% column.id %]" [% IF graph.group_by == column.id %]selected[% END %]>[% column.name %]</option>
+                        <option value="[% column.id %]" [% IF graph.group_by == column.id %]selected[% END %]>[% column.name | html_entity %]</option>
                     [% END %]
                 </select>
             </div>
@@ -75,7 +75,7 @@
                 <select class="form-control" name="metric_group_id">
                     <option value="" [% UNLESS graph.metric_group_id %]selected[% END %]></option>
                     [% FOREACH metric_group IN metric_groups %]
-                        <option value="[% metric_group.id %]" [% IF graph.metric_group_id == metric_group.id %]selected[% END %]>[% metric_group.name %]</option>
+                        <option value="[% metric_group.id %]" [% IF graph.metric_group_id == metric_group.id %]selected[% END %]>[% metric_group.name | html_entity %]</option>
                     [% END %]
                 </select>
             </div>
