--- a/views/config.tt
+++ b/views/config.tt
@@ -8,7 +8,7 @@
                     <select class="form-control" id="sort_layout_id" name="sort_layout_id">
                         <option value="">ID</option>
                         [% FOREACH column IN all_columns %]
-                            <option value="[% column.id %]" [% IF instance.sort_layout_id == column.id %]selected[% END %]>[% column.name %]</option>
+                            <option value="[% column.id %]" [% IF instance.sort_layout_id == column.id %]selected[% END %]>[% column.name | html_entity %]</option>
                         [% END %]
                     </select>
                 </div>
