Add autocur field to configuration options

--- a/public/css/ctrlo-bootstrap.css
+++ b/public/css/ctrlo-bootstrap.css
@@ -1472,6 +1472,9 @@ small.search_term {
 #manage-fields.column-type-daterange .field-options.daterange {
   display: block; }
 
+#manage-fields.column-type-autocur .field-options.autocur {
+  display: block; }
+
 #manage-fields.column-type-rag #options .stored-value,
 #manage-fields.column-type-calc #options .stored-value {
   display: none; }
