--- a/views/layout.tt
+++ b/views/layout.tt
@@ -16,17 +16,18 @@
                 <div class="form-group">
                     <label for="type">Type:</label>
                     <select class="form-control" id="type" name="type">
-                        <option value="string" [% IF column.type == "string" %]selected[% END %]>Text</option>
-                        <option value="intgr" [% IF column.type == "intgr" %]selected[% END %]>Integer</option>
-                        <option value="date" [% IF column.type == "date" %]selected[% END %]>Date</option>
-                        <option value="daterange" [% IF column.type == "daterange" %]selected[% END %]>Date range</option>
-                        <option value="enum" [% IF column.type == "enum" %]selected[% END %]>Dropdown list</option>
-                        <option value="tree" [% IF column.type == "tree" %]selected[% END %]>Tree</option>
-                        <option value="file" [% IF column.type == "file" %]selected[% END %]>Document</option>
-                        <option value="person" [% IF column.type == "person" %]selected[% END %]>Person</option>
-                        <option value="rag" [% IF column.type == "rag" %]selected[% END %]>RedAmberGreen status (RAG)</option>
-                        <option value="calc" [% IF column.type == "calc" %]selected[% END %]>Calculated value</option>
-                        <option value="curval" [% IF column.type == "curval" %]selected[% END %]>Field(s) for records from another table</option>
+                        <option value="string"      [% IF column.type == "string" %]selected    [% END %]>Text</option>
+                        <option value="intgr"       [% IF column.type == "intgr" %]selected     [% END %]>Integer</option>
+                        <option value="date"        [% IF column.type == "date" %]selected      [% END %]>Date</option>
+                        <option value="daterange"   [% IF column.type == "daterange" %]selected [% END %]>Date range</option>
+                        <option value="enum"        [% IF column.type == "enum" %]selected      [% END %]>Dropdown list</option>
+                        <option value="tree"        [% IF column.type == "tree" %]selected      [% END %]>Tree</option>
+                        <option value="file"        [% IF column.type == "file" %]selected      [% END %]>Document</option>
+                        <option value="person"      [% IF column.type == "person" %]selected    [% END %]>Person</option>
+                        <option value="rag"         [% IF column.type == "rag" %]selected       [% END %]>RedAmberGreen status (RAG)</option>
+                        <option value="calc"        [% IF column.type == "calc" %]selected      [% END %]>Calculated value</option>
+                        <option value="curval"      [% IF column.type == "curval" %]selected    [% END %]>Field(s) for records from another table</option>
+                        <option value="autocur"     [% IF column.type == "autocur" %]selected   [% END %]>Automatic value of other sheet's references to this one</option>
                     </select>
                 </div>
             [% END %]
@@ -124,7 +125,7 @@
             <div class="form-group col-md-12">
                 <label for="display_field">Column</label>
                 <select class="form-control" id="display_field" name="display_field">
-                    [% FOREACH field in all_columns %]
+                    [% FOREACH field in layout.all %]
                         <option value="[% field.id %]" [% IF column.display_field == field.id %]selected[% END %]>[% field.name | html_entity %]</option>
                     [% END %]
                 </select>
@@ -199,7 +200,7 @@
     <div class="field-options curval">
         <h4>Field options</h4>
         [% IF instance_layouts.size %]
-            [% rti = column.refers_to_instance %]
+            [% rti = column.refers_to_instance_id %]
             <div class="form-group">
                 <div class="radio">
                     <label>
@@ -221,8 +222,8 @@
                 </div>
             </div>
             <div class="form-group">
-                <label for="refers_to_instance">Use this table:</label>
-                <select class="form-control" id="refers_to_instance" name="refers_to_instance">
+                <label for="refers_to_instance_id">Use this table:</label>
+                <select class="form-control" id="refers_to_instance_id" name="refers_to_instance_id">
                     [% IF NOT rti %]
                         <option></option>
                     [% END %]
@@ -375,6 +376,46 @@
             </div>
         </div>
     </div>
+    <div class="field-options autocur">
+        <h4>Auto-value field options</h4>
+        [% IF layout.referred_by.size %]
+            <div class="form-group">
+                <label for="related_field_id">Fields referring to this field:</label>
+                <select class="form-control" id="related_field_id" name="related_field_id">
+                    [% FOREACH referring IN layout.referred_by %]
+                        <option data-instance_id=[% referring.instance_id %] value="[% referring.id %]" [% IF column.related_field_id == referring.id %]selected[% END %]>[% referring.name | html_entity %]</option>
+                    [% END %]
+                </select>
+            </div>
+            [% FOREACH instance IN instance_layouts %]
+                <div id="autocur_instance_[% instance.instance_id %]" class="autocur_instance"
+                    [% IF !column.refers_to_instance_id OR column.refers_to_instance_id != instance.instance_id %]
+                        style="display:none"
+                    [% END %]
+                    >
+                    <div class="form-group">
+                        <label for="curval_instance">Columns to show:</label>
+                        [% FOREACH c IN instance.layout.all %]
+                            [% NEXT IF c.type == "curval" %]
+                            [% checked = "" %]
+                            [% IF instance.instance_id == column.refers_to_instance_id AND column.has_curval_field(c.id) %]
+                                [% checked = "checked" %]
+                            [% END %]
+                            <div class="checkbox">
+                                <label>
+                                    <input type="checkbox" name="curval_field_ids" value="[% c.id %]" [% checked %]>[% c.name %]
+                                </label>
+                            </div>
+                        [% END %]
+                    </div>
+                </div>
+            [% END %]
+        [% ELSE %]
+            <div class="alert alert-info">
+                No other sheets refer to this sheet
+            </div>
+        [% END %]
+    </div>
 [% END %]
 
 
@@ -413,7 +454,7 @@
             </tr>
         </thead>
         <tbody id="sortable">
-            [% FOREACH col IN all_columns %]
+            [% FOREACH col IN layout.all %]
             <tr>
                 <input type="hidden" name="position" value="[% col.id %]">
                 <td><a href="/layout/[% col.id %]">Edit</a></td>
@@ -532,7 +573,7 @@
                         </div>
                     ' );
                 });
-                $('#refers_to_instance').change(function(){
+                $('#refers_to_instance_id').change(function(){
                     var divid = '#instance_fields_' + $(this).val();
                     $('.instance_fields').hide();
                     $(divid).show();
@@ -543,13 +584,13 @@
                 [% END %]
                 [% IF column.filter.as_json AND NOT column.filter.as_json.match('^[{}\s]*$') %]
                     var data = decodeBase64('[% column.filter.base64 %]');
-                    $('#builder[% column.refers_to_instance %]').queryBuilder('setRules',
+                    $('#builder[% column.refers_to_instance_id %]').queryBuilder('setRules',
                         JSON.parse(data)
                     );
                 [% END %]
 
                 $('#submit_save').click(function() {
-                    var current_builder = "#builder" + $('#refers_to_instance').val();
+                    var current_builder = "#builder" + $('#refers_to_instance_id').val();
                     if( $('#jstree_demo_div').length && $('#jstree_demo_div').is(":visible") ) {
                         var v =$("#jstree_demo_div").jstree(true).get_json('#', { 'flat': false });
                         var mytext = JSON.stringify(v);
