--- a/public/css/ctrlo-bootstrap.css
+++ b/public/css/ctrlo-bootstrap.css
@@ -1,3 +1,18 @@
+@font-face {
+  font-family: 'Open Sans remote';
+  font-style: normal;
+  font-weight: 300;
+  src: local("Open Sans Light"), local("OpenSans-Light"), url("/fonts/Open_Sans_300.eot?#iefix") format("embedded-opentype"), url("/fonts/Open_Sans_300.woff") format("woff"), url("/fonts/Open_Sans_300.woff2") format("woff2"), url("/fonts/Open_Sans_300.svg#OpenSans") format("svg"); }
+@font-face {
+  font-family: 'Open Sans remote';
+  font-style: normal;
+  font-weight: 400;
+  src: local("Open Sans"), local("OpenSans"), url("/fonts/Open_Sans_400.eot?#iefix") format("embedded-opentype"), url("/fonts/Open_Sans_400.woff") format("woff"), url("/fonts/Open_Sans_400.woff2") format("woff2"), url("/fonts/Open_Sans_400.svg#OpenSans") format("svg"); }
+@font-face {
+  font-family: 'Open Sans remote';
+  font-style: normal;
+  font-weight: 700;
+  src: local("Open Sans Bold"), local("OpenSans-Bold"), url("/fonts/Open_Sans_700.eot?#iefix") format("embedded-opentype"), url("/fonts/Open_Sans_700.woff") format("woff"), url("/fonts/Open_Sans_700.woff2") format("woff2"), url("/fonts/Open_Sans_700.svg#OpenSans") format("svg"); }
 /* a11y-related */
 .visually-hidden {
   border: 0;
@@ -305,22 +320,6 @@ nav button .heading {
   background-color: #fff;
   z-index: 2; }
 
-/*! normalize.css v3.0.0 | MIT License | git.io/normalize */
-@font-face {
-  font-family: 'Open Sans remote';
-  font-style: normal;
-  font-weight: 300;
-  src: local("Open Sans Light"), local("OpenSans-Light"), url("/fonts/Open_Sans_300.eot?#iefix") format("embedded-opentype"), url("/fonts/Open_Sans_300.woff") format("woff"), url("/fonts/Open_Sans_300.woff2") format("woff2"), url("/fonts/Open_Sans_300.svg#OpenSans") format("svg"); }
-@font-face {
-  font-family: 'Open Sans remote';
-  font-style: normal;
-  font-weight: 400;
-  src: local("Open Sans"), local("OpenSans"), url("/fonts/Open_Sans_400.eot?#iefix") format("embedded-opentype"), url("/fonts/Open_Sans_400.woff") format("woff"), url("/fonts/Open_Sans_400.woff2") format("woff2"), url("/fonts/Open_Sans_400.svg#OpenSans") format("svg"); }
-@font-face {
-  font-family: 'Open Sans remote';
-  font-style: normal;
-  font-weight: 700;
-  src: local("Open Sans Bold"), local("OpenSans-Bold"), url("/fonts/Open_Sans_700.eot?#iefix") format("embedded-opentype"), url("/fonts/Open_Sans_700.woff") format("woff"), url("/fonts/Open_Sans_700.woff2") format("woff2"), url("/fonts/Open_Sans_700.svg#OpenSans") format("svg"); }
 html {
   font-family: 'Open Sans remote',sans-serif; }
 
@@ -331,8 +330,7 @@ header {
   border-top: 5px solid #1460aa; }
 
 .hscroll {
-  overflow-x: visible;
-  margin-right: 20px; }
+  overflow-x: visible; }
 
 body {
   margin-top: 20px;
@@ -1369,6 +1367,59 @@ small.search_term {
   z-index: 5;
   position: absolute; }
 
+[role="tooltip"] .tooltip,
+[role="tooltip"] + .tooltip {
+  padding: .5em;
+  top: -2.7em;
+  right: -5em;
+  border: 1px solid #000;
+  background-color: #fff; }
+
+[role="tooltip"]:focus .tooltip.visually-hidden,
+[role="tooltip"]:active .tooltip.visually-hidden,
+[role="tooltip"]:hover .tooltip.visually-hidden,
+[role="tooltip"]:focus + .tooltip.visually-hidden,
+[role="tooltip"]:active + .tooltip.visually-hidden,
+[role="tooltip"]:hover + .tooltip.visually-hidden {
+  clip: auto;
+  height: auto;
+  margin: auto;
+  overflow: auto;
+  padding: initial;
+  position: absolute;
+  width: auto;
+  opacity: 1; }
+
+/* less / more */
+.more-less.clipped {
+  height: 60px;
+  overflow: hidden; }
+
+.more-less.transparent {
+  color: transparent; }
+
+.more-less .column-content {
+  padding: .5em;
+  margin-top: .5em;
+  width: 80%;
+  word-wrap: break-word;
+  overflow-wrap: break-word;
+  word-break: initial; }
+
+/* Data table */
+#data-table th * {
+  color: #000; }
+
+#data-table thead button {
+  border: 1px solid #bbb;
+  background-color: inherit;
+  vertical-align: bottom;
+  margin-left: 0.2em;
+  margin-bottom: 0.2em; }
+
+.controls {
+  padding-top: .5em; }
+
 /* Person contact details popover */
 .person.contact-details {
   max-width: 25em;
@@ -1428,85 +1479,7 @@ small.search_term {
   border-bottom-color: #891e88;
   background-color: rgba(137, 30, 136, 0.3); }
 
-/* Data table */
-.table-rows-pagination {
-  text-align: right; }
-
-.table-rows-pagination form,
-.table-rows-pagination .table-pagination {
-  display: inline-block; }
-
-#data-table th * {
-  color: #000; }
-
-#data-table thead button {
-  border: 1px solid #bbb;
-  background-color: inherit;
-  vertical-align: bottom;
-  margin-left: 0.2em;
-  margin-bottom: 0.2em; }
-
-.controls {
-  padding-top: .5em; }
-
 /* manage-fields */
-.tab-interface [role="tablist"] {
-  list-style-type: none;
-  margin: 2.5em 0;
-  margin-bottom: .9em;
-  padding: 0; }
-
-.tab-interface [role="tablist"] li {
-  margin: 0;
-  display: inline-block; }
-
-.tab-interface [role="tablist"] li:not(:first-child) {
-  margin-left: 1em; }
-
-.tab-interface [role="tab"] {
-  padding: 1em;
-  border: 2px solid #1460aa;
-  text-decoration: none;
-  position: relative;
-  top: 2px;
-  border-bottom: 0; }
-
-.tab-interface [role="tab"][aria-selected="false"] {
-  border: 0; }
-
-.tab-interface [role="tab"][aria-selected="true"] {
-  background-color: #fff;
-  font-weight: bold; }
-
-.tab-interface [role="tab"]:focus,
-.tab-interface [role="tab"]:hover {
-  text-decoration: solid underline black;
-  outline: 0; }
-
-.tab-interface [role="tabpanel"] {
-  border: 2px solid #1460aa;
-  padding: 1em;
-  display: none; }
-
-.tab-interface [role="tabpanel"].active {
-  display: block; }
-
-.tab-interface [role="tabpanel"] h3:first-child {
-  margin: .5em 0 1em 0; }
-
-@media screen and (max-width: 41em) {
-  .tab-interface [role="tablist"] {
-    margin: 0; }
-
-  .tab-interface [role="tablist"] li,
-  .tab-interface [role="tab"] {
-    display: block; }
-
-  .tab-interface [role="tablist"] li:not(:first-child) {
-    margin: 0; }
-
-  .tab-interface [role="tab"] {
-    border: 2px solid; } }
 #manage-fields {
   border-bottom: 1px solid #bbb;
   padding-bottom: .5em; }
@@ -1553,9 +1526,6 @@ small.search_term {
 #manage-fields.column-type-daterange .field-options.daterange {
   display: block; }
 
-#manage-fields.column-type-autocur .field-options.autocur {
-  display: block; }
-
 #manage-fields.column-type-rag #options .stored-value,
 #manage-fields.column-type-calc #options .stored-value {
   display: none; }
@@ -1563,6 +1533,7 @@ small.search_term {
 #manage-fields #advanced-field-settings h3,
 #manage-fields h4 {
   display: inline-block;
+  border-bottom: 1px solid #bbb;
   padding-bottom: .5em; }
 
 #manage-fields .permission.write-new .permission,
@@ -1643,29 +1614,6 @@ small.search_term {
 #current-permissions .configuration {
   position: relative; }
 
-[role="tooltip"] .tooltip,
-[role="tooltip"] + .tooltip {
-  padding: .5em;
-  top: -2.7em;
-  right: -5em;
-  border: 1px solid #000;
-  background-color: #fff; }
-
-[role="tooltip"]:focus .tooltip.visually-hidden,
-[role="tooltip"]:active .tooltip.visually-hidden,
-[role="tooltip"]:hover .tooltip.visually-hidden,
-[role="tooltip"]:focus + .tooltip.visually-hidden,
-[role="tooltip"]:active + .tooltip.visually-hidden,
-[role="tooltip"]:hover + .tooltip.visually-hidden {
-  clip: auto;
-  height: auto;
-  margin: auto;
-  overflow: auto;
-  padding: initial;
-  position: absolute;
-  width: auto;
-  opacity: 1; }
-
 #current-permissions .permission .group-name {
   font-size: 1.2em;
   margin-top: 0;
@@ -1681,19 +1629,3 @@ small.search_term {
 #current-permissions .summary {
   width: 75%;
   display: inline-block; }
-
-/* less / more */
-.more-less.clipped {
-  height: 60px;
-  overflow: hidden; }
-
-.more-less.transparent {
-  color: transparent; }
-
-.more-less .column-content {
-  padding: .5em;
-  margin-top: .5em;
-  width: 80%;
-  word-wrap: break-word;
-  overflow-wrap: break-word;
-  word-break: initial; }
