Column header collapse/expand widget

--- a/public/css/ctrlo-bootstrap.css
+++ b/public/css/ctrlo-bootstrap.css
@@ -1410,12 +1410,32 @@ small.search_term {
 #data-table th * {
   color: #000; }
 
+#data-table th h2 {
+  margin: 0;
+  font-size: 1.2em; }
+
 #data-table thead button {
   border: 1px solid #bbb;
   background-color: inherit;
   vertical-align: bottom;
-  margin-left: 0.2em;
-  margin-bottom: 0.2em; }
+  white-space: nowrap; }
+
+#data-table thead .popover {
+  word-break: break-word;
+  margin-top: .5em; }
+
+#data-table thead ul {
+  list-style-type: none;
+  padding: .5em; }
+
+#data-table thead li {
+  margin: .5em 0; }
+
+#data-table thead .helptext {
+  border-bottom: 1px solid #ccc; }
+
+#data-table thead .helptext + * {
+  margin: 1em 0 0 0; }
 
 .controls {
   padding-top: .5em; }
