--- a/views/data_table.tt
+++ b/views/data_table.tt
@@ -26,44 +26,48 @@
         <tr>
             [% sort = sort.shift %]
             [% sort_order = sort.type %]
-            [% sort_label = sort_order == "asc" ? "sort descending" : "sort ascending" %]
+            [% sort_label = '&udarr; sort ' _ (sort_order == "asc" ? "descending" : "ascending") %]
 
             [% IF sort.id == -11 AND sort.type == "asc" %]
-                [% st = "&#9650;" %]
+                [% st = "&darr;" %]
             [% ELSIF sort.id == -11 %]
-                [% st = "&#9660;" %]
+                [% st = "&uarr;" %]
             [% ELSE %]
                 [% st = "" %]
             [% END %]
             <th scope="col" [% sort.id == -11 && "aria-sort=\"${sort_order}ending\"" %]>
-                <a href="?sort=-11">ID[% st %]
-                    [% sort.id == -11 && "<span class=\"visually-hidden\">${sort_label}</span>" %]
-                </a>
+                <button type="button" class="trigger" aria-expanded="false" aria-controls="col--11-options">[% st %]ID &rsaquo;</button>
+                <ul class="expandable popover" id="col--11-options">
+                    <h2>ID column</h2>
+                    [% IF col.helptext %]
+                    <li class="helptext">[% col.helptext | html_entity %]</li>
+                    [% END %]
+                    <li><a href="?sort=-11">[% sort_label %]</a></li>
+                    [% IF col.type == "person" AND layout.user_can("message") AND records.size %]
+                    <li>Email everyone in this column</li>
+                    [% END %]
+                </ul>
             </th>
             [% FOREACH col IN columns %]
                 [% IF sort.id == col.id AND sort.type == "asc" %]
-                    [% st = "&#9650;" %]
+                    [% st = "&darr;" %]
                 [% ELSIF sort.id == col.id %]
-                    [% st = "&#9660;" %]
+                    [% st = "&uarr;" %]
                 [% ELSE %]
                     [% st = "" %]
                 [% END %]
-                <th scope="col">
-                    <a [% sort.id == col.id && "aria-sort=\"${sort_order}ending\"" %] href="?sort=[% col.id %]">
-                        [% col.name | html_entity %][% IF col.id == sort.id %][% st %][% END %]
-                        [% sort.id == col.id && "<span class=\"visually-hidden\">${sort_label}</span>" %]
-                    </a>
-                    [% IF col.helptext %]
-                        <button aria-haspopup="true" data-toggle="modal" data-target="#modal_helptext" data-col_id="[% col.id %]" data-col_name="[% col.name | html %]">
-                             <span class="visually-hidden">Need help</span>?
-                        </button>
-                    [% END %]
-
-                    [% IF col.type == "person" AND layout.user_can("message") AND records.size %]
-                        <button aria-haspopup="true" data-toggle="modal" data-target="#modal_sendemail" data-peopcol_id="[% col.id %]">
-                            <span class="visually-hidden">Send e-mail</span>&#x2709;
-                        </button>
-                    [% END %]
+                <th scope="col" [% sort.id == col.id && "aria-sort=\"${sort_order}ending\"" %]>
+                    <button type="button" class="trigger" aria-expanded="false" aria-controls="col-[% col.id %]-options">[% st %][% col.name | html_entity %] &rsaquo; </button>
+                    <ul class="expandable popover" id="col-[% col.id %]-options">
+                        <h2>[% col.name | html_entity %] column</h2>
+                        [% IF col.helptext %]
+                        <li class="helptext">[% col.helptext | html_entity %]</li>
+                        [% END %]
+                        <li><a href="?sort=[% col.id %]">[% sort_label %]</a></li>
+                        [% IF 1 || col.type == "person" AND layout.user_can("message") AND records.size %]
+                        <li><button type="button" class="btn btn-sm btn-primary">&#x1f4e7; Email each person in this column</button></li>
+                        [% END %]
+                    </ul>
                 </th>
             [% END %]
         </tr>
