--- a/views/edit.tt
+++ b/views/edit.tt
@@ -239,7 +239,7 @@
                 var calculator_button = [
                     {
                         action:     'add',
-                        label:      '+',
+                        subvaluelabel:      '+',
                         keypress:   [ '+' ],
                         operation:  function (a, b) { return a + b; }
                     },
@@ -466,7 +466,7 @@
                     > <span [% label_style %]>[% label %]</span>
                 </label>
             </div>
-        [% ELSE %]
+        [% ELSIF dispcol.type != "curval"  %]
             <label for="[% dispcol.id %]" [% label_style %]>
                 [% label %][% IF oldvalue %] (current value &quot;[% oldvalue %]&quot;)[% END %]
             </label>
@@ -521,55 +521,12 @@
                         [% END %]
                     </select>
                 [% ELSIF dispcol.type == "curval" %]
-                    [% IF dispcol.typeahead %]
-                        <input type="hidden" name="[% field %]" id="[% dispcol.id %]_value" value="[% editvalue.id %]">
-                        <input type="text" class="form-control" id="[% dispcol.id %]" autocomplete="off"
-                            name="[% field %]_typeahead" value="[% IF record %][% editvalue.html %][% END %]" [% readonly %] >
-                        [% typeaheads.push({id = dispcol.id, field = field }) %]
-                    [% ELSE %]
-                        [% IF dispcol.multivalue %]
-                            [%# Ensure a value gets sent back to show this field was shown if nothing selected %]
-                            <input type="hidden" name="[% field %]">
-                        [% END %]
-                        <select class="form-control [% IF dispcol.has_subvalues %]selectpicker [% END %]"
-                            name="[% field %]" id="[% dispcol.id %]" [% IF readonly %]disabled[% END %]
-                            [% IF dispcol.has_subvalues %]
-                                data-multiple-separator="; " data-window-padding="70"
-                                [% IF dispcol.multivalue %]multiple[% END %]
-                            [% END %]>
-                            [% IF !dispcol.multivalue %]
-                                [% IF dispcol.optional OR editvalue.deleted OR (record.current_id AND NOT editvalue.id) OR NOT record.current_id %]
-                                    <option></option>
-                                [% END %]
-                            [% END %]
-                            [% IF page == "bulk" %]
-                                [% enumvals = dispcol.all_values %]
-                            [% ELSE %]
-                                [% enumvals = dispcol.filtered_values %]
-                            [% END %]
-                            [% FOREACH enumval IN enumvals %]
-                                [% UNLESS enumval.deleted %]
-                                    <option value="[% enumval.id %]" [% IF editvalue.id_hash.${enumval.id} %]selected[% END %]
-                                        [% IF dispcol.has_subvalues %]
-                                            title="[% enumval.mainvalue | html_entity %]" [%# only show main title in selection %]
-                                            [%# custom content for each option in order to show tooltip text %]
-                                            data-content="<span title='[% enumval.value | html_entity %]'>
-                                                [% enumval.mainvalue | html_entity %]
-                                                <small class='text-muted'>[% enumval.subvalue | html_entity %]</small>
-                                                <span class='moreinfo' data-record-id='[% enumval.id %]'>Read more...</span>
-                                            </span>"
-                                        [% END %]
-                                    >
-                                    [% enumval.value | html_entity %]
-                                    </option>
-                                [% END %]
-                            [% END %]
-                        </select>
-                    [% END %]
+                    [% PROCESS curval_column column = dispcol %]
                 [% ELSIF dispcol.type == "tree" %]
                     [% FOREACH val IN editvalue.ids %]
                         <input type="hidden" name="[% field %]" class="[% field %]" value="[% val %]">
                     [% END %]
+                    <input type="hidden" name="[% field %]" id="treeval_id[% dispcol.id %]" value="[% editvalue.id %]">
                     [% IF readonly %]
                         <div class="form-group">
                             [% editvalue.html %]
@@ -742,3 +699,97 @@
         </div>
     [% END %]
 [% END %]
+
+[% BLOCK curval_typeahead_column %]
+    <input type="hidden" name="[% field %]" id="[% dispcol.id %]_value" value="[% editvalue.id %]">
+    <input type="text" class="form-control" id="[% dispcol.id %]" autocomplete="off"
+        name="[% field %]_typeahead" value="[% IF record %][% editvalue.html %][% END %]" [% readonly %] >
+    [% typeaheads.push({id = dispcol.id, field = field }) %]
+[% END %]
+
+[% BLOCK curval_multivalue_column %]
+    [% IF page == "bulk" %]
+        [% values = column.all_values %]
+    [% ELSE %]
+        [% values = column.filtered_values %]
+    [% END %]
+
+    <div class="select-widget multi">
+        <input type="hidden" name="[% field %]" id="[% field %]_value">
+        <div class="select-widget-label">[% label %] </div>
+        <ul class="current">
+        [% FOREACH value IN values %]
+            [% NEXT IF value.deleted %]
+            [% checked = editvalue.id_hash.${value.id} %]
+            [% value_id = field _ '_' _ value.id %]
+            <li [% !checked && 'hidden' %] data-list-item="[% value_id %]">[% value.mainvalue | html_entity %]</li>
+        [% END %]
+        </ul>
+        <button type="button" aria-controls="[% field %]_available_values" aria-expanded="false">
+            Change 
+            <span class="chevron expanded">&#x25b2;</span>
+            <span class="chevron collapsed">&#x25bc;</span>
+        </button>
+        <ul hidden class="available" id="[% field %]_available_values">
+        [% FOREACH value IN values %]
+            [% NEXT IF value.deleted %]
+            [% checked = editvalue.id_hash.${value.id} %]
+            [% value_id = field _ '_' _ value.id %]
+            <li>
+                <input id="[% value_id %]" type="checkbox" [% checked && 'checked' %]>
+                <label for="[% value_id %]">[% value.mainvalue | html_entity %]</label>
+                <span>[% value.subvalue | html_entity %]</span>
+                <button class="more-info" data-record-id="[% value.id %]">View details</button>      
+            </li>
+        [% END %]
+        </ul>
+    </div>
+[% END %]
+
+[% IF 0 %]
+    <input type="hidden" name="[% field %]" id="[% field %]">
+    <select class="form-control [% IF dispcol.has_subvalues %]selectpicker [% END %]"
+        name="[% field %]" id="[% dispcol.id %]" [% IF readonly %]disabled[% END %]
+        [% IF dispcol.has_subvalues %]
+            data-multiple-separator="; " data-window-padding="70"
+            [% IF dispcol.multivalue %]multiple[% END %]
+        [% END %]>
+        [% IF !dispcol.multivalue %]
+            [% IF dispcol.optional OR editvalue.deleted OR (record.current_id AND NOT editvalue.id) OR NOT record.current_id %]
+                <option></option>
+            [% END %]
+        [% END %]
+        [% IF page == "bulk" %]
+            [% enumvals = dispcol.all_values %]
+        [% ELSE %]
+            [% enumvals = dispcol.filtered_values %]
+        [% END %]
+        [% FOREACH enumval IN enumvals %]
+            [% UNLESS enumval.deleted %]
+                <option value="[% enumval.id %]" [% IF editvalue.id_hash.${enumval.id} %]selected[% END %]
+                    [% IF dispcol.has_subvalues %]
+                        title="[% enumval.mainvalue | html_entity %]" [%# only show main title in selection %]
+                        [%# custom content for each option in order to show tooltip text %]
+                        data-content="<span title='[% enumval.value | html_entity %]'>
+                            [% enumval.mainvalue | html_entity %]
+                            <small class='text-muted'>[% enumval.subvalue | html_entity %]</small>
+                            <span class='moreinfo' data-record-id='[% enumval.id %]'>Read more...</span>
+                        </span>"
+                    [% END %]
+                >
+                [% enumval.value | html_entity %]
+                </option>
+            [% END %]
+        [% END %]
+    </select>
+[% END %]
+
+[%  
+    BLOCK curval_column;
+        IF column.typeahead;
+            PROCESS curval_typeahead_column;
+        ELSIF column.multivalue;
+            PROCESS curval_multivalue_column;
+        END;
+    END;
+%]
