Handle comma-separation and <blank> placeholder toggling

--- a/sass/ctrlo-bootstrap.scss
+++ b/sass/ctrlo-bootstrap.scss
@@ -1183,6 +1183,14 @@ small.search_term {
   display: inline;
 }
 
+.select-widget .current .none-selected {
+    display: none;
+}
+
+.select-widget .current.empty .none-selected {
+    display: inline;
+}
+
 .select-widget .current {
     margin: 0 .5em;
 }
