--- a/public/css/ctrlo-bootstrap.css
+++ b/public/css/ctrlo-bootstrap.css
@@ -1720,6 +1720,12 @@ small.search_term {
 .select-widget .current li {
   display: inline; }
 
+.select-widget .current .none-selected {
+  display: none; }
+
+.select-widget .current.empty .none-selected {
+  display: inline; }
+
 .select-widget .current {
   margin: 0 .5em; }
 
