--- a/views/data.tt
+++ b/views/data.tt
@@ -16,6 +16,22 @@
                             Current view: [% IF v %][% v.name | html %][% ELSE %]All data[% END %] <span class="caret"></span>
                     </button>
                     <ul id="menu_view" class="dropdown-menu scrollable-menu" role="menu">
+                        [% IF config.gads.legacy_menu %]
+                            [% IF layout.user_can("view_create") %]
+                                <li role="presentation"><a role="menuitem" tabindex="-1" href="/view/0">Create new view</a></li>
+                            [% END %]
+                            [% IF v %]
+                                [% IF layout.user_can("view_create") %]
+                                    [% IF !v.global OR layout.user_can("layout") %]
+                                        <li role="presentation"><a role="menuitem" tabindex="-1" href="/view/[% v.id %]">Edit this view</a></li>
+                                    [% END %]
+                                    <li role="presentation"><a role="menuitem" tabindex="-1" href="/view/0?clone=[% v.id %]">Clone this view</a></li>
+                                [% END %]
+                                <li role="presentation"><a href="" role="menuitem" tabindex="-1" data-toggle="modal" data-target="#modal_alert">Alert me</a></li>
+                            [% END %]
+                            <li role="presentation"><a href="" role="menuitem" tabindex="-1" data-toggle="modal" data-target="#modal_rewind">Historic view...</a></li>
+                            <li role="presentation" class="divider"></li>
+                        [% END %]
                         [% first = 1 %]
                         [% FOREACH ve IN user_views %]
                             [% IF first AND NOT ve.global AND not ve.is_admin %]
@@ -43,6 +59,37 @@
                         [% END %]
                     </ul>
                 </div>
+
+                [% IF config.gads.legacy_menu %]
+                    <div class="btn-group">
+                        <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-expanded="false" aria-controls="menu_action">
+                                Action <span class="caret"></span>
+                        </button>
+                        <ul id="menu_action" class="dropdown-menu" role="menu">
+                            [% IF user_can_create %]
+                                <li role="presentation"><a role="menuitem" tabindex="-1" href="/edit/">New record</a></li>
+                            [% END %]
+                            [% IF layout.user_can("link") AND show_link %]
+                                <li role="presentation"><a role="menuitem" tabindex="-1" href="/link/">New linked record</a></li>
+                            [% END %]
+                            [% IF search %]
+                                [% sel_type = "in this search" %]
+                            [% ELSE %]
+                                [% sel_type = "in this view" %]
+                            [% END %]
+                            [% IF layout.user_can("bulk_update") %]
+                                <li role="presentation"><a role="menuitem" tabindex="-1" href="/bulk/update/">Update all records [% sel_type %]...</a></li>
+                                <li role="presentation"><a role="menuitem" tabindex="-1" href="/bulk/clone/">Clone all records [% sel_type %]...</a></li>
+                            [% END %]
+                            [% IF layout.user_can_delete %]
+                                <li role="presentation"><a role="menuitem" tabindex="-1" data-toggle="modal" data-target="#modal_delete" style="cursor: pointer">Delete all records [% sel_type %]...</a>
+                            [% END %]
+                            [% IF viewtype == "table" AND records.size AND layout.user_can("download") %]
+                                <li role="presentation"><a role="menuitem" tabindex="-1" href="/data?download">Download all records in view</a></li>
+                            [% END %]
+                        </ul>
+                    </div>
+                [% END %]
 
                 <div class="btn-group" role="group">
                     <a href="?viewtype=table" class="btn btn-default">
